[package]
name = "hackjack_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
rand = "0.8.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.10.0"